--- a/accounts-db/Cargo.toml
+++ b/accounts-db/Cargo.toml
@@ -15,6 +15,7 @@ blake3 = { workspace = true }
 bv = { workspace = true, features = ["serde"] }
 bytemuck = { workspace = true }
 bytemuck_derive = { workspace = true }
+byteorder.workspace = true
 bzip2 = { workspace = true }
 crossbeam-channel = { workspace = true }
 dashmap = { workspace = true, features = ["rayon", "raw-api"] }
@@ -34,6 +35,7 @@ rayon = { workspace = true }
 seqlock = { workspace = true }
 serde = { workspace = true, features = ["rc"] }
 serde_derive = { workspace = true }
+sha2.workspace = true
 smallvec = { workspace = true, features = ["const_generics"] }
 solana-bucket-map = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
